# hcmake

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile.sh  cross_compile.sh  host_compile.sh
cmake/: aarch64-linux-gnu.toolchain.cmake  common.cmake  test.cmake
grpc/: CMakeLists.txt  greeter_client.cc  hello_client.cc  hello_server.cc
inc/: add.hpp  any.hpp  base.hpp  basis.hpp  cxxopts.hpp  derived1.hpp  derived2.hpp  hello_cmake.hpp  intrusive_ptr.hpp  ir.hpp  ir_visitor.hpp  misc_util.hpp  misc_util_def.hpp  naive_tensor.hpp  npu_aol.h  npu_testing.h  optional.hpp  registry.hpp  simple_vector.hpp  std_inc.h  std_inc.hpp  tensor.hpp  vector_iterator.hpp
py_exports/: CMakeLists.txt  py_math.cpp
src/: CMakeLists.txt  add.cpp  basis.cpp  derived1.cpp  derived2.cpp  hello_cmake.cpp  ir.cpp  ir_visitor.cpp  naive_tensor.cpp  npu_aol.cpp  npu_testing.cpp  py_module.cpp  registry.cpp  simple_vector.cpp  tensor.cpp
test/: CMakeLists.txt  alloc_mem.cpp  benchmark_example.cpp  calc_api_time.cpp  general_example.cpp  intrusive_ptr_bench.cpp  intrusive_ptr_bench.csv  open_close.cpp  read_onnx.cpp  read_regs.cpp  resize.cpp  test2.cpp  test_add.cpp  test_hello_cmake.cpp  test_intrusive_ptr.cpp  test_registry.cpp  test_simple_vector.cpp  test_transpose.cpp  test_visitor.cpp
